packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/query_features_ext_args_capX.cbor
£factionequeryftarget¡hfeatures„hprofileshversionsepairsjrate_limitdargs¡kX-mycompany¡mdebug_loggingõ